[gd_scene load_steps=26 format=3 uid="uid://6j8fy1frgkdh"]

[ext_resource type="Script" uid="uid://cdx15om08cfwl" path="res://scenes/main/main_scene.gd" id="1_pw63i"]
[ext_resource type="Script" path="res://scenes/main/main_scene_build_panel.gd" id="1_w2twt"]
[ext_resource type="TileSet" uid="uid://ccj0cetq68ngx" path="res://resources/game_mining_tileset_resource.tres" id="2_pu3yx"]
[ext_resource type="Script" uid="uid://domuhsksyf45b" path="res://scenes/main/main_scene_camera.gd" id="3_7ykc4"]
[ext_resource type="Shader" uid="uid://b6xuoksvhikww" path="res://textures/shaders/tree_sway_shader.gdshader" id="3_rt2n2"]
[ext_resource type="Texture2D" uid="uid://btddrviw2hv3q" path="res://textures/shaders/tree_sway_shader_noise_texture.tres" id="4_c16ls"]
[ext_resource type="AudioStream" uid="uid://br25fin25r34a" path="res://sounds/light-rain.mp3" id="6_18nlu"]
[ext_resource type="Script" uid="uid://cctresaqip7vx" path="res://scenes/main/main_scene_lightning_rect.gd" id="6_c16ls"]
[ext_resource type="AudioStream" uid="uid://cs0l82t8ftu1u" path="res://sounds/wind.mp3" id="7_c1pb6"]
[ext_resource type="PackedScene" uid="uid://3yqptbg6r2s5" path="res://controls/command_bar_manager.tscn" id="9_w4lj1"]
[ext_resource type="Script" uid="uid://bvcbfwlm4eaef" path="res://controls/command_bar.gd" id="10_3mcv8"]
[ext_resource type="Script" uid="uid://bm1cpjj0iuxcy" path="res://controls/command_bar_button.gd" id="11_a1617"]
[ext_resource type="Script" path="res://scenes/main/main_scene_floors_bar.gd" id="13_a1617"]
[ext_resource type="Script" path="res://scenes/main/main_scene_walls_bar.gd" id="14_cf2is"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18nlu"]
shader = ExtResource("3_rt2n2")
shader_parameter/noise_sampler = ExtResource("4_c16ls")
shader_parameter/median_direction = 0.02
shader_parameter/sway_strength = 0.02
shader_parameter/speed = 0.2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rt2n2"]
blend_mode = 1
light_mode = 1

[sub_resource type="Curve" id="Curve_c1pb6"]
_limits = [0.0, 0.3, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 1.52164, 0, 0, Vector2(0.503496, 0.3), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.55925, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_6wevv"]
curve = SubResource("Curve_c1pb6")

[sub_resource type="Gradient" id="Gradient_e1cbu"]
colors = PackedColorArray(1, 1, 1, 0.0745098, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mngbo"]
gradient = SubResource("Gradient_e1cbu")

[sub_resource type="Curve" id="Curve_rt2n2"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_c16ls"]
_limits = [0.0, 30.0, 0.0, 1.0]
_data = [Vector2(0, 14.8924), 0.0, 146.113, 0, 0, Vector2(0.321678, 30), 0.0, 0.0, 0, 0, Vector2(1, 30), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_18nlu"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_c1pb6"]
curve_x = SubResource("Curve_rt2n2")
curve_y = SubResource("Curve_c16ls")
curve_z = SubResource("Curve_18nlu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rt2n2"]
lifetime_randomness = 0.01
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -200, 0)
emission_shape = 3
emission_box_extents = Vector3(1000, 1, 1)
angle_min = 1.07288e-05
angle_max = 1.07288e-05
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 2000.0
initial_velocity_max = 2500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.6
scale_max = 2.0
scale_over_velocity_curve = SubResource("CurveXYZTexture_c1pb6")
color_initial_ramp = SubResource("GradientTexture1D_mngbo")
alpha_curve = SubResource("CurveTexture_6wevv")

[node name="MainScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_pw63i")

[node name="TileMapGroundLayer" type="TileMapLayer" parent="."]
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false

[node name="TileMapMiningLayer" type="TileMapLayer" parent="."]
z_index = 1
tile_set = ExtResource("2_pu3yx")
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false

[node name="TileMapPlantLayer" type="TileMapLayer" parent="."]
z_index = 2
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
occlusion_enabled = false
y_sort_origin = 16
collision_enabled = false
navigation_enabled = false

[node name="PawnRoot" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 2
y_sort_enabled = true

[node name="TileMapPlantLayer2" type="TileMapLayer" parent="."]
z_index = 4
material = SubResource("ShaderMaterial_18nlu")
scale = Vector2(0.5, 0.5)
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_7ykc4")

[node name="RainAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_18nlu")

[node name="WindAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_c1pb6")

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="RainParticles" type="GPUParticles2D" parent="UICanvasLayer"]
unique_name_in_owner = true
process_mode = 4
visible = false
material = SubResource("CanvasItemMaterial_rt2n2")
position = Vector2(578, -1)
amount = 1000
lifetime = 0.4
preprocess = 0.5
fixed_fps = 10
visibility_rect = Rect2(0, 0, 1920, 1080)
process_material = SubResource("ParticleProcessMaterial_rt2n2")

[node name="LightningRect" type="ColorRect" parent="UICanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
color = Color(1, 1, 1, 0)
script = ExtResource("6_c16ls")

[node name="MarginContainer" type="MarginContainer" parent="UICanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CommandBarManager" parent="UICanvasLayer/MarginContainer" instance=ExtResource("9_w4lj1")]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 0

[node name="ActionsBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("10_3mcv8")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="OrdersBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ActionsBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
mouse_filter = 1
text = "Orders"
script = ExtResource("11_a1617")
command_bar = NodePath("../../OrdersBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="ArchitectureBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ActionsBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
text = "Architecture"
script = ExtResource("11_a1617")
command_bar = NodePath("../../ArchitectureBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="BuildingsBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ActionsBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
mouse_filter = 1
text = "Buildings"
script = ExtResource("11_a1617")
command_bar = NodePath("../../BuildingsBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="OverlayBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ActionsBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
mouse_filter = 1
text = "Overlays"
script = ExtResource("11_a1617")
command_bar = NodePath("../../OverlaysBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="GraphsBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ActionsBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
mouse_filter = 1
text = "Graphs"
script = ExtResource("11_a1617")
command_bar = NodePath("../../GraphsBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="OrdersBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("10_3mcv8")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="CommandBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/OrdersBar"]
layout_mode = 2
mouse_filter = 1
text = "Mine"
script = ExtResource("11_a1617")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="CommandBarButton2" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/OrdersBar"]
layout_mode = 2
mouse_filter = 1
text = "Chop"
script = ExtResource("11_a1617")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="CommandBarButton3" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/OrdersBar"]
layout_mode = 2
text = "Hunt"
script = ExtResource("11_a1617")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="CommandBarButton4" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/OrdersBar"]
layout_mode = 2
text = "Harvest"
script = ExtResource("11_a1617")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="BuildingsBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_w2twt")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="OverlaysBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("10_3mcv8")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="GraphsBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("10_3mcv8")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="ArchitectureBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("10_3mcv8")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="WallsBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ArchitectureBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
text = "Walls"
script = ExtResource("11_a1617")
command_bar = NodePath("../../WallsBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="FloorsBarButton" type="Button" parent="UICanvasLayer/MarginContainer/CommandBarManager/ArchitectureBar" node_paths=PackedStringArray("command_bar")]
layout_mode = 2
text = "Floors"
script = ExtResource("11_a1617")
command_bar = NodePath("../../FloorsBar")
metadata/_custom_type_script = "uid://bm1cpjj0iuxcy"

[node name="FloorsBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("13_a1617")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="WallsBar" type="HBoxContainer" parent="UICanvasLayer/MarginContainer/CommandBarManager"]
layout_mode = 2
script = ExtResource("14_cf2is")
metadata/_custom_type_script = "uid://bvcbfwlm4eaef"

[node name="PanelContainer" type="PanelContainer" parent="UICanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -122.0
offset_bottom = 164.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UICanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UICanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Weather:"
horizontal_alignment = 1

[node name="CalmWeatherButton" type="Button" parent="UICanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Calm"

[node name="WindyLeftButton" type="Button" parent="UICanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Windy Left"

[node name="WindyRightButton" type="Button" parent="UICanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Windy Right"

[node name="StormButton" type="CheckButton" parent="UICanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Storm"

[connection signal="pressed" from="UICanvasLayer/PanelContainer/VBoxContainer/CalmWeatherButton" to="." method="_on_calm_weather_button_pressed"]
[connection signal="pressed" from="UICanvasLayer/PanelContainer/VBoxContainer/WindyLeftButton" to="." method="_on_windy_left_button_pressed"]
[connection signal="pressed" from="UICanvasLayer/PanelContainer/VBoxContainer/WindyRightButton" to="." method="_on_windy_right_button_pressed"]
[connection signal="pressed" from="UICanvasLayer/PanelContainer/VBoxContainer/StormButton" to="." method="_on_storm_button_pressed"]
